some stabilization